2008-06-17  Peter Bloomfield

	* libbalsa/libbalsa_private.h: scrap unused cache-unseen-child
	code.
	* libbalsa/mailbox.c: (lbm_index_entry_populate_from_msg,
	lbm_node_has_unseen_child, lbm_msgno_changed,
	lbm_set_threading, mbox_model_get_value): ditto.

2008-06-14  Paweł Sałek

	* NEWS, configure.in: release 2.3.25.

2008-06-12  Peter Bloomfield

	* libbalsa/mailbox_mbox.c: (lbm_mbox_header_cb, parse_mailbox),
	libbalsa_mailbox_mbox_sync): declare GMimeParserHeaderRegexFunc
	callback properly, and do not cast references to it.

2008-06-11  Paweł Sałek

	* libbalsa/imap/imap-handle.c: detect disconnect on write.
	* src/ab-main.c: add "Delete Entry" menu entry.

2008-06-05  Peter Bloomfield

	New method libbalsa_mailbox_index_entry_clear to avoid using
	libbalsa_mailbox_cache_message with a NULL message to clear the
	index entry.

	* libbalsa/mailbox.h: remove
	libbalsa_mailbox_index_entry_free--no need to export;
	new method libbalsa_mailbox_index_entry_clear.
	* libbalsa/mailbox.c: (lbm_index_entry_free,
	libbalsa_mailbox_index_entry_clear,
	libbalsa_mailbox_free_mindex, libbalsa_mailbox_msgno_removed):
	replace public
	libbalsa_mailbox_index_entry_free with static
	lbm_index_entry_free; new public method
	libbalsa_mailbox_index_entry_clear;
	(libbalsa_mailbox_cache_message): require a non-NULL message.
	* libbalsa/mailbox_imap.c: (imap_exists_cb): use
	libbalsa_mailbox_index_entry_clear.

2008-06-04  Peter Bloomfield

	* libbalsa/mime.c: (process_mime_part): quote a flowed message
	as flowed.

2008-06-04  Peter Bloomfield

	* src/balsa-mime-widget-message.c: (add_header_gchar): look
	further into the value, to make sure we detect a long header
	field.

2008-06-02  Peter Bloomfield

	* src/balsa-mime-widget-message.c: (bm_header_widget_new,
	add_header_gchar): let GtkTextView wrap headers.

2008-06-01  Peter Bloomfield

	* src/main-window.c: tighten code.
	* src/message-window.c: (mw_header_activate): do not change
	balsa-app.shown_headers.